--- a/comic_project/templates/form_validate.html
+++ b/comic_project/templates/form_validate.html
@@ -11,7 +11,8 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
-    <link rel="shortcut icon" href="favicon.ico"> <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/font-awesome.css" rel="stylesheet">
     <link href="/static/css/animate.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
@@ -19,98 +20,107 @@
 </head>
 
 <body class="gray-bg">
-    <div class="wrapper wrapper-content animated fadeInRight">
-        <div class="row">
-            <div class="col-sm-8 col-sm-offset-2">
-                <div class="ibox float-e-margins">
-                    <div class="ibox-title">
-                        <h5>完善个人信息</h5>
-                    </div>
-                    <div class="ibox-content">
-                        <form class="form-horizontal m-t" id="signupForm">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">姓氏：</label>
-                                <div class="col-sm-8">
-                                    <input id="firstname" name="firstname" class="form-control" type="text" value="{{ user.first_name }}">
+<div class="wrapper wrapper-content animated fadeInRight">
+    <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title">
+                    <h5>完善个人信息</h5>
+                </div>
+                <div class="ibox-content">
+                    <form class="form-horizontal m-t" id="signupForm">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">姓氏：</label>
+                            <div class="col-sm-8">
+                                <input id="firstname" name="firstname" class="form-control" type="text"
+                                       value="{{ user.first_name }}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">名字：</label>
+                            <div class="col-sm-8">
+                                <input id="lastname" name="lastname" class="form-control" type="text"
+                                       aria-required="true" aria-invalid="false" class="valid"
+                                       value="{{ user.last_name }}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">用户名：</label>
+                            <div class="col-sm-8">
+                                <input id="username" disabled="disabled" value="{{ user.username }}" name="username"
+                                       class="form-control" type="text" aria-required="true" aria-invalid="true"
+                                       class="error">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">密码：</label>
+                            <div class="col-sm-8">
+                                <input id="password" name="password" class="form-control" type="password">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">确认密码：</label>
+                            <div class="col-sm-8">
+                                <input id="confirm_password" name="confirm_password" class="form-control"
+                                       type="password">
+                                <span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 请再次输入您的密码</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">E-mail：</label>
+                            <div class="col-sm-8">
+                                <input id="email" name="email" class="form-control" type="email"
+                                       value="{{ user.email }}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">phone：</label>
+                            <div class="col-sm-8">
+                                <input id="phone" name="phone" class="form-control" type="text"
+                                       value="{{ user.phone }}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-8 col-sm-offset-3">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" class="checkbox" id="agree" name="agree">
+                                        我已经认真阅读并同意《C+使用协议》
+                                    </label>
                                 </div>
                             </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">名字：</label>
-                                <div class="col-sm-8">
-                                    <input id="lastname" name="lastname" class="form-control" type="text" aria-required="true" aria-invalid="false" class="valid" value="{{ user.last_name }}">
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-8 col-sm-offset-3">
+                                <button class="btn btn-primary" onclick="foucs()">提交</button>
                             </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">用户名：</label>
-                                <div class="col-sm-8">
-                                    <input id="username" disabled="disabled" value="{{ user.username }}" name="username" class="form-control" type="text" aria-required="true" aria-invalid="true" class="error">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">密码：</label>
-                                <div class="col-sm-8">
-                                    <input id="password" name="password" class="form-control" type="password">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">确认密码：</label>
-                                <div class="col-sm-8">
-                                    <input id="confirm_password" name="confirm_password" class="form-control" type="password">
-                                    <span class="help-block m-b-none"><i class="fa fa-info-circle"></i> 请再次输入您的密码</span>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">E-mail：</label>
-                                <div class="col-sm-8">
-                                    <input id="email" name="email" class="form-control" type="email" value="{{ user.email }}">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label class="col-sm-3 control-label">phone：</label>
-                                <div class="col-sm-8">
-                                    <input id="phone" name="phone" class="form-control" type="text" value="{{ user.phone }}">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-sm-8 col-sm-offset-3">
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox" class="checkbox" id="agree" name="agree"> 我已经认真阅读并同意《C+使用协议》
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-sm-8 col-sm-offset-3">
-                                    <button class="btn btn-primary" onclick="foucs()">提交</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-
     </div>
 
+</div>
 
-    <!-- 全局js -->
-    <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
 
-    <!-- 自定义js -->
-    <script src="/static/js/content.js"></script>
+<!-- 全局js -->
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/bootstrap.min.js"></script>
 
-    <!-- jQuery Validation plugin javascript-->
-    <script src="/static/js/plugins/validate/jquery.validate.min.js"></script>
-    <script src="/static/js/plugins/validate/messages_zh.min.js"></script>
+<!-- 自定义js -->
+<script src="/static/js/content.js"></script>
 
-    <script src="/static/js/demo/form-validate-demo.js"></script>
+<!-- jQuery Validation plugin javascript-->
+<script src="/static/js/plugins/validate/jquery.validate.min.js"></script>
+<script src="/static/js/plugins/validate/messages_zh.min.js"></script>
 
-    <script>
-        function foucs() {
-            $.ajax({
+<script src="/static/js/demo/form-validate-demo.js"></script>
+
+<script>
+    function foucs() {
+        $.ajax({
             //几个参数需要注意一下
             cache: false,
             type: "POST",//方法类型
@@ -131,10 +141,8 @@
             }
         });
     }
-    </script>
+</script>
 
-    
-    
 
 </body>
 
